--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>FPMA Melun</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="../src/assets/img/logo - Copie.png">
+  <link rel="icon" type="image/x-icon" href="/assets/img/default.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>body{background:#ccc;background-color:#a9a9a9}@media print{body{background:#fff;margin:0;box-shadow:0}}
 </style><link rel="stylesheet" href="styles-WPUALFQ2.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-WPUALFQ2.css"></noscript></head>
@@ -40,5 +40,5 @@
     xmlhttp.send();
   </script>
   <div id="versert"></div>-->
-<script src="polyfills-6EAL64PA.js" type="module"></script><script src="main-PNG4O3SV.js" type="module"></script></body>
+<script src="polyfills-6EAL64PA.js" type="module"></script><script src="main-X4CQU7OU.js" type="module"></script></body>
 </html>
