--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en" data-critters-container>
+<html lang="en" translate="no" data-critters-container>
 <head>
   <meta charset="utf-8">
   <title>FPMA Melun</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Fanompom-pivavahana isak' Alahady ao amin'ny Eglise Adventiste 69 Avenue Maréchal Foch Dammarie les Lys, manomboka amin'ny 10h30.">
+  <link rel="canonical" href="self-canonical"> 
   <link rel="icon" type="image/x-icon" href="/assets/img/default.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>body{background:#ccc;background-color:#a9a9a9}@media print{body{background:#fff;margin:0;box-shadow:0}}
@@ -26,19 +28,5 @@
   <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
-
-
-  <!--<script>
-    var xmlhttp = new XMLHttpRequest();
-    xmlhttp.onreadystatechange = function () {
-      if (this.readyState == 4 && this.status == 200) {
-        var infoVerset = JSON.parse(this.responseText);
-        document.getElementById("versertphp").innerHTML = infoVerset.display;
-      }
-    };
-    xmlhttp.open("GET", "https://ebible.fr/services/service-verset/json/json-verset-du-jour.php", true);
-    xmlhttp.send();
-  </script>
-  <div id="versert"></div>-->
 <script src="polyfills-6EAL64PA.js" type="module"></script><script src="main-X4CQU7OU.js" type="module"></script></body>
 </html>
